fixing spacing when no records displayed

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -35,5 +35,5 @@ a {
 }
 
 .no-records {
-  margin-left: 200px;
+  margin-left: 150px;
 }
